# EvidencePipeline

./: Dockerfile  README.md  evidence_pipeline.py  pyproject.toml
EvidencePipeline/: __init__.py  _version.py  evi_initializer.py  generate_hc_genes.py  generate_hints.py  main.nf  main.py  nextflow.config  predictionAnalysis.py  prep_evidence.py
EvidencePipeline/modules/: assembly.nf  download.nf  proteins.nf  rnaseq.nf  tiberius.nf  transdecoder.nf  util.nf
EvidencePipeline/scripts/: extend_cds_with_stop_codon.py  hc_module.py  merge_annotations.py  split_genome_fasta.py
EvidencePipelineNF/: main.nf  nextflow.config
EvidencePipelineNF/modules/: assembly.nf  conflicts.nf  diamond.nf  download.nf  hc.nf  isoseq.nf  proteins.nf  rnaseq.nf  tiberius.nf  transdecoder.nf  util.nf
EvidencePipelineNF/scripts/: check_stop_codons.py  hc_module.py  merge_annotations.py
EvidencePipelineNF/wrappers/: classify_and_revise.py  hc_by_intrinsic_and_training.py  hc_by_proteins.py
conf/: README.md  base.config  greifswald_hpc.config  local.config  parameters.yaml  slurm_generic.config  user_hpc_template.config
docs/: arabidopsis.yaml
